--- a/form/ui_main_form.ui
+++ b/form/ui_main_form.ui
@@ -109,51 +109,10 @@
             <string>Поиск</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="0" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_lastName">
+            <item row="2" column="0" colspan="2">
+             <widget class="QCheckBox" name="chk_firstName">
               <property name="text">
-               <string>Фамилия</string>
-              </property>
-             </widget>
-            </item>
-            <item row="7" column="0">
-             <widget class="QCheckBox" name="chk_birthDate">
-              <property name="text">
-               <string>Дата рожд.</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="0">
-             <widget class="QCheckBox" name="chk_sex">
-              <property name="text">
-               <string>Пол</string>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_patrName">
-              <property name="text">
-               <string>Отчество</string>
-              </property>
-             </widget>
-            </item>
-            <item row="7" column="1">
-             <widget class="QDateEdit" name="edit_birthDate">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0" colspan="2">
-             <widget class="QLineEdit" name="edit_firstName">
-              <property name="enabled">
-               <bool>false</bool>
+               <string>Имя</string>
               </property>
              </widget>
             </item>
@@ -164,10 +123,10 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_firstName">
-              <property name="text">
-               <string>Имя</string>
+            <item row="5" column="0" colspan="2">
+             <widget class="QLineEdit" name="edit_patrName">
+              <property name="enabled">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -194,33 +153,6 @@
               </item>
              </widget>
             </item>
-            <item row="5" column="0" colspan="2">
-             <widget class="QLineEdit" name="edit_patrName">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="10" column="0">
-             <widget class="QCheckBox" name="chk_SNILS">
-              <property name="text">
-               <string>СНИЛС</string>
-              </property>
-             </widget>
-            </item>
-            <item row="11" column="0">
-             <widget class="QCheckBox" name="chk_document">
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>Документ</string>
-              </property>
-             </widget>
-            </item>
             <item row="10" column="1">
              <widget class="QLineEdit" name="edit_SNILS">
               <property name="enabled">
@@ -245,19 +177,15 @@
                 <height>0</height>
                </size>
               </property>
-              <item>
-               <property name="text">
-                <string>Паспорт</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>123</string>
-               </property>
-              </item>
+              <property name="editable">
+               <bool>true</bool>
+              </property>
+              <property name="currentIndex">
+               <number>-1</number>
+              </property>
              </widget>
             </item>
-            <item row="13" column="0" colspan="2">
+            <item row="14" column="0" colspan="2">
              <spacer name="verticalSpacer">
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -269,6 +197,26 @@
                </size>
               </property>
              </spacer>
+            </item>
+            <item row="11" column="0">
+             <widget class="QCheckBox" name="chk_document">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Документ</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="0">
+             <widget class="QCheckBox" name="chk_SNILS">
+              <property name="text">
+               <string>СНИЛС</string>
+              </property>
+             </widget>
             </item>
             <item row="9" column="0">
              <widget class="QCheckBox" name="checkBox">
@@ -319,6 +267,68 @@
               </property>
               <property name="placeholderText">
                <string>Номер</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="0">
+             <widget class="QCheckBox" name="chk_birthDate">
+              <property name="text">
+               <string>Дата рожд.</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
+             <widget class="QCheckBox" name="chk_sex">
+              <property name="text">
+               <string>Пол</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0" colspan="2">
+             <widget class="QCheckBox" name="chk_patrName">
+              <property name="text">
+               <string>Отчество</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="0" colspan="2">
+             <widget class="QCheckBox" name="chk_lastName">
+              <property name="text">
+               <string>Фамилия</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" colspan="2">
+             <widget class="QLineEdit" name="edit_firstName">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <widget class="QDateEdit" name="edit_birthDate">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="0">
+             <widget class="QCheckBox" name="chk_policy">
+              <property name="text">
+               <string>Полис</string>
+              </property>
+             </widget>
+            </item>
+            <item row="13" column="1">
+             <widget class="QComboBox" name="eidt_policyType">
+              <property name="enabled">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
