--- a/form/ui_main_form.ui
+++ b/form/ui_main_form.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>517</width>
-    <height>555</height>
+    <height>635</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -109,10 +109,10 @@
             <string>Поиск</string>
            </attribute>
            <layout class="QGridLayout" name="gridLayout_2">
-            <item row="2" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_firstName">
+            <item row="0" column="0">
+             <widget class="QCheckBox" name="chk_lastName">
               <property name="text">
-               <string>Имя</string>
+               <string>Фамилия</string>
               </property>
              </widget>
             </item>
@@ -123,6 +123,27 @@
               </property>
              </widget>
             </item>
+            <item row="2" column="0">
+             <widget class="QCheckBox" name="chk_firstName">
+              <property name="text">
+               <string>Имя</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" colspan="2">
+             <widget class="QLineEdit" name="edit_firstName">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="QCheckBox" name="chk_patrName">
+              <property name="text">
+               <string>Отчество</string>
+              </property>
+             </widget>
+            </item>
             <item row="5" column="0" colspan="2">
              <widget class="QLineEdit" name="edit_patrName">
               <property name="enabled">
@@ -130,7 +151,37 @@
               </property>
              </widget>
             </item>
-            <item row="8" column="1">
+            <item row="6" column="0">
+             <widget class="QCheckBox" name="chk_birthDate">
+              <property name="text">
+               <string>Дата рожд.</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
+             <widget class="QDateEdit" name="edit_birthDate">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="calendarPopup">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="0">
+             <widget class="QCheckBox" name="chk_sex">
+              <property name="text">
+               <string>Пол</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
              <widget class="QComboBox" name="edit_sex">
               <property name="enabled">
                <bool>false</bool>
@@ -143,6 +194,11 @@
               </property>
               <item>
                <property name="text">
+                <string/>
+               </property>
+              </item>
+              <item>
+               <property name="text">
                 <string>М</string>
                </property>
               </item>
@@ -153,7 +209,34 @@
               </item>
              </widget>
             </item>
-            <item row="10" column="1">
+            <item row="8" column="0">
+             <widget class="QCheckBox" name="checkBox">
+              <property name="text">
+               <string>Контакт?</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="1">
+             <widget class="QLineEdit" name="lineEdit">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
+            </item>
+            <item row="9" column="0">
+             <widget class="QCheckBox" name="chk_SNILS">
+              <property name="text">
+               <string>СНИЛС</string>
+              </property>
+             </widget>
+            </item>
+            <item row="9" column="1">
              <widget class="QLineEdit" name="edit_SNILS">
               <property name="enabled">
                <bool>false</bool>
@@ -166,7 +249,20 @@
               </property>
              </widget>
             </item>
-            <item row="11" column="1">
+            <item row="10" column="0">
+             <widget class="QCheckBox" name="chk_document">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Документ</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="1">
              <widget class="QComboBox" name="edit_documentType">
               <property name="enabled">
                <bool>false</bool>
@@ -185,60 +281,7 @@
               </property>
              </widget>
             </item>
-            <item row="14" column="0" colspan="2">
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
             <item row="11" column="0">
-             <widget class="QCheckBox" name="chk_document">
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>Документ</string>
-              </property>
-             </widget>
-            </item>
-            <item row="10" column="0">
-             <widget class="QCheckBox" name="chk_SNILS">
-              <property name="text">
-               <string>СНИЛС</string>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="0">
-             <widget class="QCheckBox" name="checkBox">
-              <property name="text">
-               <string>Контакт?</string>
-              </property>
-             </widget>
-            </item>
-            <item row="9" column="1">
-             <widget class="QLineEdit" name="lineEdit">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="12" column="0">
              <widget class="QLineEdit" name="edit_documentSerial">
               <property name="enabled">
                <bool>false</bool>
@@ -254,7 +297,7 @@
               </property>
              </widget>
             </item>
-            <item row="12" column="1">
+            <item row="11" column="1">
              <widget class="QLineEdit" name="edit_documentNumber">
               <property name="enabled">
                <bool>false</bool>
@@ -270,67 +313,149 @@
               </property>
              </widget>
             </item>
-            <item row="7" column="0">
-             <widget class="QCheckBox" name="chk_birthDate">
-              <property name="text">
-               <string>Дата рожд.</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="0">
-             <widget class="QCheckBox" name="chk_sex">
-              <property name="text">
-               <string>Пол</string>
-              </property>
-             </widget>
-            </item>
-            <item row="4" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_patrName">
-              <property name="text">
-               <string>Отчество</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0" colspan="2">
-             <widget class="QCheckBox" name="chk_lastName">
-              <property name="text">
-               <string>Фамилия</string>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0" colspan="2">
-             <widget class="QLineEdit" name="edit_firstName">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-             </widget>
-            </item>
-            <item row="7" column="1">
-             <widget class="QDateEdit" name="edit_birthDate">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>0</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="13" column="0">
+            <item row="12" column="0">
              <widget class="QCheckBox" name="chk_policy">
               <property name="text">
                <string>Полис</string>
               </property>
              </widget>
             </item>
-            <item row="13" column="1">
+            <item row="12" column="1">
              <widget class="QComboBox" name="eidt_policyType">
               <property name="enabled">
                <bool>false</bool>
               </property>
              </widget>
+            </item>
+            <item row="13" column="1">
+             <widget class="QComboBox" name="eidt_policyKind">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="0">
+             <widget class="QCheckBox" name="chk_policyActual">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Актуальный</string>
+              </property>
+             </widget>
+            </item>
+            <item row="14" column="1">
+             <widget class="QDateEdit" name="edit_policyActual">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="wrapping">
+               <bool>true</bool>
+              </property>
+              <property name="accelerated">
+               <bool>false</bool>
+              </property>
+              <property name="calendarPopup">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="15" column="0">
+             <widget class="QLineEdit" name="edit_policySerial">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="placeholderText">
+               <string>Серия</string>
+              </property>
+             </widget>
+            </item>
+            <item row="15" column="1">
+             <widget class="QLineEdit" name="edit_policyNumber">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="placeholderText">
+               <string>Номер</string>
+              </property>
+             </widget>
+            </item>
+            <item row="16" column="0">
+             <widget class="QCheckBox" name="chk_adress">
+              <property name="text">
+               <string>Адресс</string>
+              </property>
+              <property name="checked">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="16" column="1">
+             <widget class="QComboBox" name="edit_adressType">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <item>
+               <property name="text">
+                <string>Регистрации</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Проживания</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="17" column="0">
+             <widget class="QCheckBox" name="chk_adressPlace">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="text">
+               <string>Место проживания</string>
+              </property>
+             </widget>
+            </item>
+            <item row="17" column="1">
+             <layout class="QHBoxLayout" name="horizontalLayout">
+              <item>
+               <widget class="QCheckBox" name="chk_adressPlaceNot">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>30</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>не</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QComboBox" name="edit_adressPlace">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item row="18" column="0">
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
